crates/glyph-cli/tests/corpus/invalid/imports/missing_import.glyph
import "./nonexistent.glyph" { something }

skill main()
    description: "Main."
    flow:
        "Do something."
